# toneflx-lite-vst

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-release-vst.yml
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: Bitcrusher.h  Chorus.h  Delay.h  Reverb.h  Saturation.h
src/generators/: PresetEngine.h
src/models/: Preset.h
src/utils/: PresetJson.h
tests/: PresetEngineTests.cpp
